[package]
name = "haris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.0"
web3 = "0.17.0"
dotenv = "0.15.0"
ethers = "1.0.2"
ethers-core = "1.0.2"
ethers-contract = "1.0.2"
ethers-providers = "1.0.2"
ethers-signers = "1.0.2"
serde_json = "1.0.89"
